PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite 5.4 (Git)

- phoromatic: Reporting of overall result counts for given test schedules
- phoromatic: Report benchmarking / test run errors to server
- phoromatic: Show system errors/warnings from the Phoromatic web UI

Phoronix Test Suite 5.4 Milestone 3
20 October 2014

- pts-core: Introduce basic system logging capabilities for services
- pts-core: Try downloading files from remote download caches up to two times in event of failure / checksum issues
- phoromatic: Start a basic logger of Phoromatic Server events
- phoromatic: Add new create schedule interface
- phoromatic: Properly hook in system ID / group validation for test schedules
- phoromatic: Support for editing schedules from the web UI
- phoromatic: Support for activating/deactivating "deleting" test schedules from the web UI
- phoromatic: Support for reporting the network MAC address (for later WoL purposes)
- phoromatic: Update the CSS style
- phoromatic: Add support for the main administrator to create multiple users associated with the same account
- phoromatic: Add support for "viewer accounts" where they can view data but not alter/write data
- phoromatic: Fix for adding systems to groups
- phoromatic: Support for mass editing of systems in groups via the systems page
- phoromatic: Support for removing system groups
- phoromatic: Introduce activity stream and logging of user events / display from "activity events" page
- phoromatic: Support for merging result files from the results page by clicking on each of them once
- phoromatic: Support for deleting results from the web UI's results page

Phoronix Test Suite 5.4 Milestone 2
5 October 2014

- pts-core: Add "ResultAfterString" to test result parser XML schema
- pts-core: Other result file parsing improvements/fixes
- pts-core: Rename debug-run mode to debug-benchmark, add extra features